--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.8",
+    "autoprefixer": "^10.4.20",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18"
